--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.database=MYSQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.password=
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/dbakesinposdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/posamin?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.sql.init.mode=never
