category add commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 
 # ************* Server and others ******************
 server.port=1965
-server.servlet.context-path=/admin
+#server.servlet.context-path=/admin
 spring.thymeleaf.check-template-location=true 
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true 
